--- a/src/templates/_chatbot/index.twig
+++ b/src/templates/_chatbot/index.twig
@@ -29,7 +29,7 @@
         } else {
             window.chamberlain.config = {
                 containerElementSelector: '{{ containerElementSelector }}',
-
+                articleTextSelector: '{{ articleTextSelector }}',
             };
             window.chamberlain.init();
         }
