--- a/src/templates/_chatbot/index.twig
+++ b/src/templates/_chatbot/index.twig
@@ -8,7 +8,7 @@
                 <div data-chat-text-buttons-container class="hidden">
                     <div data-chat-response-instructions>
                         <hr/>
-                        Choose a response
+                        <div data-chat-response-instruction-text>Choose a response</div>
                         <hr/>
                     </div>
                     <div data-chat-text-buttons></div>
